# python-playwright-example

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: playwright.yml
src/fixtures/: fixtures.py
src/pages/: abstract_page.py  base.py  login.py
src/pages/bank_manager/: add_account.py  add_customer.py  bank_manager_base.py  customers.py
src/pages/components/: dropdown.py  table.py
src/pages/customer/: account.py  customer_base.py  select_customer.py  transactions.py
src/testdata/: data.py
src/tests/: bank_manager_tests.py  customer_tests.py
src/utils/: date_utils.py
