[project]
name = "python-playwright-example"
version = "0.1.0"
description = "Example of automated tests using Python and Playwright"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0",
    "playwright>=1.58",
    "pytest-playwright>=0.7",
    "allure-pytest>=2.15",
    "python-slugify>=8.0",
    "pytest-xdist>=3.8",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
python_files = ["*_tests.py"]
addopts = [
    "--tracing", "retain-on-failure",
    "--video", "retain-on-failure",
    "--screenshot", "only-on-failure",
    "--output", "playwright-report",
    "--alluredir=allure-results",
]
